force-app/main/default/objects/LOG_LogMessageSettings__c/LOG_LogMessageSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>LOG_LogMessageSettings</description>
    <label>LOG_LogMessageSettings</label>
</CustomObject>