force-app/main/default/objects/LOG_LogMessageSettings__c/fields/LOG_Debug__c.field-meta.xml
<CustomField>
    <fullName>LOG_Debug__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If True – log debug messages in this org 
Otherwise - False</description>
    <inlineHelpText>If True – log debug messages in this org 
Otherwise - False</inlineHelpText>
    <label>Debug</label>
    <type>Checkbox</type>
</CustomField>