force-app/main/default/objects/LOG_LogMessageSettings__c/fields/LOG_Error__c.field-meta.xml
<CustomField>
    <fullName>LOG_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If True – log errors in this org 
Otherwise - False</description>
    <inlineHelpText>If True – log errors in this org 
Otherwise - False</inlineHelpText>
    <label>Error</label>
    <type>Checkbox</type>
</CustomField>