force-app/main/default/objects/LOG_LogMessageSettings__c/fields/LOG_Info__c.field-meta.xml
<CustomField>
    <fullName>LOG_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If True – log info messages in this org 
Otherwise - False</description>
    <inlineHelpText>If True – log info messages in this org 
Otherwise - False</inlineHelpText>
    <label>Info</label>
    <type>Checkbox</type>
</CustomField>