force-app/main/default/objects/LOG_LogMessageSettings__c/fields/LOG_Log_Purge__c.field-meta.xml
<CustomField>
    <fullName>LOG_Log_Purge__c</fullName>
    <defaultValue>360</defaultValue>
    <description>Log Purge (Days) - The number of days of logs to keep</description>
    <inlineHelpText>Log Purge (Days) - The number of days of logs to keep</inlineHelpText>
    <label>Log Purge</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>