force-app/main/default/objects/LOG_LogMessageSettings__c/fields/LOG_Warning__c.field-meta.xml
<CustomField>
    <fullName>LOG_Warning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If True – log Warning messages in this org 
Otherwise - False</description>
    <inlineHelpText>If True – log Warning-level messages in this org 
Otherwise - False</inlineHelpText>
    <label>Warning</label>
    <type>Checkbox</type>
</CustomField>